<resources>
    <string name="app_name">醒悟</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">标题</string>
    <string name="daily">日记</string>
    <string name="change_color">更换颜色</string>
    <string name="sure">确定</string>
    <string name="search">搜索</string>
    <string name="content">内容</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="about">关于</string>
    <string name="checking_for_new_version">正在检查新版本</string>
    <string name="new_version">新版本</string>
    <string name="it_is_the_latest_version">已是最新版本</string>
    <string name="cancel">取消</string>
    <string name="failed_to_check_for_updates">检查更新失败</string>
    <string name="add">添加</string>
    <string name="title_activity_settings">设置</string>
    <string name="settings">设置</string>
    <string name="update">更新</string>
    <string name="check_update">检查更新</string>
    <string name="edit">编辑</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="format_0">yyyy年MM月dd日 HH:mm:ss</string>
    <string name="format_1">yyyy-MM-dd HH:mm:ss</string>
    <string name="format_2">yyyy/MM/dd HH:mm:ss</string>
    <string name="calendar">日历</string>
    <string name="my_email">1926879119@qq.com</string>
    <string name="locked">上锁</string>
    <string name="m_copy">复制</string>
    <string name="unlocked">解锁</string>
    <string name="copy_successful">复制成功。</string>
    <string name="forgot_password">忘记密码</string>
    <string name="mood">心情</string>
    <string name="happy">开心</string>
    <string name="not_happy">不开心</string>
    <string name="quiet">平静</string>
    <string name="not_add">不添加</string>
    <string name="angry">生气</string>
    <string name="tired">累</string>
    <string name="weather">天气</string>
    <string name="sunny">晴天</string>
    <string name="add_image">添加图片</string>
    <string name="author_name">作者：流星</string>
    <string name="current_version">当前版本：%1$s</string>
    <string name="qq_920994447">QQ群：920994447</string>
    <string name="a_href_a"><![CDATA[<a href=\'%1$s\'>开源地址：%2$s</a>]]></string>
    <string name="special_thanks">特别鸣谢</string>
    <string name="do_you_save_this_diary">是否保存这篇日记？</string>
    <string name="word">字</string>
    <string name="entries">篇</string>
    <string name="key">密钥</string>
    <string name="sheet">张</string>
    <string name="please_enter_the_key_to_reset_your_password_if_you_forget_it">请先输入忘记密码时，重置密码的密钥！</string>
    <string name="the_key_was_set_successfully_please_keep_it_in_mind">密钥设置成功，请牢记！</string>
    <string name="are_you_sure_you_want_to_delete_this_journal_permanently">确定永久删除这篇日记吗？</string>
    <string name="are_you_sure_this_journal_is_moving_to_the_recycle_bin">确定这篇日记移入回收站吗？</string>
    <string name="please_unlock_it_first_to_verify_your_identity">请先解锁以验证您的身份。</string>
    <string name="wrong_password">密码错误。</string>
    <string name="the_password_has_been_cleared">密码已清除。</string>
    <string name="the_key_is_incorrect">密钥错误。</string>
    <string name="please_set_key">请先设置密钥。</string>
    <string name="import_failed">导入失败</string>
    <string name="update_log">更新日志</string>
    <string name="import_s">导入</string>
    <string name="export_all">导出全部</string>
    <string name="clear">清空</string>
    <string name="sort">排序</string>
    <string name="by_time_newest_to_oldest">按时间(从新到旧)</string>
    <string name="by_time_oldest_to_newest">按时间(从旧到新)</string>
    <string name="auto_save">自动保存</string>
    <string name="classifications_are_displayed_by_year_month">分类按年月显示</string>
    <string name="ui">界面</string>
    <string name="theme_mode">主题模式</string>
    <string name="follow_the_system">跟随系统</string>
    <string name="light_mode">浅色模式</string>
    <string name="night_mode">深色模式</string>
    <string name="Sort_by_by_date">排序方式-按日期</string>
    <string name="from_new_to_old">从新到旧</string>
    <string name="from_old_to_new">从旧到新</string>
    <string name="chinese_simplified" translatable="false">简体中文</string>
    <string name="english" translatable="false">English</string>
    <string name="language">语言</string>
    <string name="sad">难过</string>
    <string name="agitated">激动</string>
    <string name="overcast">阴天</string>
    <string name="cloudy">多云</string>
    <string name="snow_day">雪天</string>
    <string name="thunderstorm">雷雨</string>
    <string name="rain_day">雨天</string>
    <string name="gale">大风</string>
    <string name="haze">雾霾</string>
    <string name="recycler_bin">回收站</string>
    <string name="add_failed">添加失败</string>
    <string name="restore">还原</string>
    <string name="do_you_want_to_delete_or_restore_the_daily">你想要删除还是还原这篇日记？</string>
    <string name="gallery">图库</string>
    <string name="create_label">创建标签</string>
    <string name="rename">重命名</string>
    <string name="the_label_is_empty">标签为空</string>
    <string name="the_label_already_exists">标签已存在</string>
    <string name="label">标签</string>
    <string name="add_video">添加视频</string>
    <string name="add_audio">添加音频</string>
    <string name="move_to_recycle_bin_when_deleting_a_diary">删除日记时移入回收站</string>
    <string name="auto_delete_message">%1$s | 还有%2$s天自动删除</string>
    <string name="regularly_automatically_delete_the_diaries_in_the_recycle_bin">定期自动删除回收站里的日记</string>
    <string name="close">关闭</string>
    <string name="days_3">3天</string>
    <string name="days_7">7天</string>
    <string name="days_14">14天</string>
    <string name="days_30">30天</string>
    <string name="appearance">外观</string>
    <string name="are_you_sure_delete_label">确定删除“%1$s”标签吗？（不会删除日记）</string>
    <string name="new_label">新建</string>
    <string name="pinned">置顶</string>
    <string name="cancel_pinned">取消置顶</string>
    <string name="webdav_backup">WebDav 备份</string>
    <string name="account_number">账号</string>
    <string name="password">密码</string>
    <string name="failed_to_backup_data">备份数据失败</string>
    <string name="backup_success">备份成功</string>
    <string name="export_success">导出成功</string>
    <string name="backup">备份</string>
    <string name="restore_2">恢复</string>
    <string name="recovery_successful">恢复成功</string>
    <string name="recovery_failed">恢复失败</string>
    <string name="encryption_no_encryption_no_input">加密（不加密不输入）</string>
    <string name="require_password_to_import">需要密码才能导入</string>
    <string name="import_successful">导入成功</string>
    <string name="help">帮助</string>
    <string name="connect">连接</string>
    <string name="failed_to_connect">连接失败</string>
    <string name="connection_successful">连接成功</string>
    <string name="line_spacing_description">第一行\n第二行\n第三行</string>
    <string name="text_line_spacing">文本行间距</string>
    <string name="on_this_day">那年今日</string>
    <string name="safe">安全</string>
    <string name="app_lock">应用锁</string>
    <string name="enabled">开启</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_font_size">文本字体大小</string>
    <string name="background">背景</string>
    <string name="wallpaper">壁纸</string>
    <string name="turn_off_the_journal_list_image_display">关闭日记列表图像显示</string>
    <string name="for_a_better_experience_do_you_want_to_turn_off_the_diary_list_image_display">为了更好的体验，是否关闭日记列表图片显示？</string>
    <string name="color">颜色</string>
    <string name="drawing">绘图</string>
    <string name="back">后退</string>
    <string name="eraser">橡皮擦</string>
    <string name="width">宽度</string>
    <string name="undo">撤销</string>
    <string name="redo">重做</string>
    <string name="select_all">全选</string>
    <string name="confirm_pinned_journal_message">确定这篇日记%1$s吗？</string>
    <string name="color_label_transparent">透明</string>
    <string name="color_label_purple">紫色</string>
    <string name="color_label_red">红色</string>
    <string name="color_label_green">绿色</string>
    <string name="color_label_blue">蓝色</string>
    <string name="color_label_yellow">黄色</string>
    <string name="color_label_pink">粉色</string>
    <string name="slider_alpha_description">图片透明度调节滑块，当前 %1$d%%</string>
    <string name="enter_your_password">输入您的密码</string>
    <string name="image">图片</string>
    <string name="user_agreement_and_privacy_Policy">用户协议与隐私政策</string>
    <string name="app_icon">应用图标</string>
    <string name="open_source_libraries">开源库</string>
    <string name="color_label_light_cyan">浅青色</string>
    <string name="selected">选中</string>
    <string name="data">数据</string>
    <string name="data_management">数据管理</string>
    <string name="export">导出</string>
    <string name="crash_prompt_message">醒悟遇到一个意外错误，是否将错误报告发送给开发者？(仅包含技术信息，不含隐私)</string>
    <string name="send_report">发送报告</string>
    <string name="exit_application">退出应用</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="export_txt_description">TXT（仅文本）</string>
    <string name="export_json_description">JSON（可导入）</string>
    <string name="daily_settings">日记设置</string>
    <string name="management_diary_related_functions">管理日记相关功能</string>
    <string name="week">星期</string>
    <string name="dynamic_color">动态取色</string>
    <string name="pin">PIN 码</string>
    <string name="the_pin_is_empty">PIN 码为空</string>
    <string name="at_least_4_digits">至少4位数</string>
    <string name="enter_pin">输入 PIN 码</string>
    <string name="dynamic_color_supporting_string">根据壁纸色调或所选颜色自动配色</string>
    <string name="date_time_format">%1$s %2$s</string>
    <string name="date_time_week_format">%1$s %2$s %3$s</string>
    <string name="select_date">选择日期</string>
    <string name="select_time">选择时间</string>
    <string name="delete_wallpaper_message">是否删除壁纸？</string>
    <string name="select_image">选择图片</string>
    <string name="take_image">拍摄图片</string>
    <string name="json_icon_description">这是一个 JSON 图标</string>
    <string name="txt_icon_description">这是一个 TXT 图标</string>
    <string name="import_and_export">导入与导出</string>
    <string name="backup_and_restore">备份与恢复</string>
    <string name="local_backup_path">本地备份路径</string>
    <string name="local_backup_path_not_selected">未选择。备份将保存在 backups/local/ 目录下。</string>
    <string name="backup_supporting_text">将所有日记、媒体记录和标签备份为 JSON 文件</string>
    <string name="restore_supporting_text">选择 JSON 备份文件进行恢复</string>
    <string name="auto_backup_supporting_text">应用启动时自动备份 JSON 文件（最多保留最新 10 个）</string>
    <string name="processing">正在处理&#8230;</string>
    <string name="auto_backup">自动备份</string>
    <string name="backup_encryption">备份加密</string>
    <string name="format_text_underline">文本格式下划线</string>
    <string name="format_text_strikethrough">文本格式删除线</string>
    <string name="format_text_color">设置文本颜色</string>
    <string name="format_text_background_color">设置文本背景颜色</string>
    <string name="insert_horizontal_rule">插入分割线</string>
    <string name="insert_hyperlink">插入超链接</string>
    <string name="heading_level">标题样式</string>
    <string name="list_and_todo">列表与待办</string>
    <string name="quote_block">引用块</string>
    <string name="left_aligned">左对齐</string>
    <string name="center_aligned">居中对齐</string>
</resources>