<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_change_background_color"
        android:title="@string/change_color" />
    <item
        android:id="@+id/item_save"
        android:icon="@drawable/baseline_done_24"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/item_lock_to_on_and_un_ed"
        android:title="@string/locked" />
    <item
        android:id="@+id/item_mood"
        android:title="@string/mood" />
    <item
        android:id="@+id/item_weather"
        android:title="@string/weather" />
    <item
        android:id="@+id/item_add_image"
        android:title="@string/add_image" />
    <item
        android:id="@+id/item_add_video"
        android:title="@string/add_video" />
    <item
        android:id="@+id/item_add_audio"
        android:title="@string/add_audio" />
    <item
        android:id="@+id/item_label"
        android:title="@string/label" />
</menu>