<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_change_background_color"
        android:title="@string/change_color" />
    <item
        android:id="@+id/item_save"
        android:icon="@drawable/baseline_done_24"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_on_lock"
        android:title="@string/locked" />
    <item
        android:id="@+id/item_mood"
        android:title="@string/mood" />
    <item
        android:id="@+id/item_weather"
        android:title="@string/weather" />
    <item
        android:id="@+id/item_add_image"
        android:title="@string/add_image" />

</menu>