<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about">

        <Preference
            app:iconSpaceReserved="false"
            app:key="about_preference"
            app:title="@string/about" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="special_thanks_preference"
            app:title="@string/special_thanks" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/update">

        <Preference
            app:iconSpaceReserved="false"
            app:key="check_update_preference"
            app:title="@string/check_update" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="update_log_preference"
            app:title="@string/update_log" />

    </PreferenceCategory>

    <PreferenceCategory
         app:iconSpaceReserved="false"
        app:title="@string/daily">

        <com.liuxing.daily.view.YearMonthSwitchPreference />

        <com.liuxing.daily.view.AutoSaveDailySwitchPreference />

        <com.liuxing.daily.view.DeleteToRecyclerBinSwitchPreference />

        <com.liuxing.daily.view.AutoDeleteRecyclerBinDailyPreference />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/appearance">

        <Preference
            app:iconSpaceReserved="false"
            app:key="appearance_preference"
            app:title="@string/appearance"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/webdav_backup">

        <Preference
            app:key="webdav_backup_preference"
            app:iconSpaceReserved="false"
            app:title="@string/webdav_backup"/>

    </PreferenceCategory>

</PreferenceScreen>