<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/g_daily"
        android:checkableBehavior="single">
        <item
            android:id="@+id/dailyFragment"
            android:icon="@drawable/baseline_notes_24"
            android:title="@string/daily" />
        <item
            android:id="@+id/calendarQueryDailyFragment"
            android:icon="@drawable/outline_calendar_month_24"
            android:title="@string/calendar" />

        <item
            android:id="@+id/galleryFragment"
            android:icon="@drawable/outline_image_24"
            android:title="@string/gallery" />

        <item
            android:id="@+id/onThisDayFragment"
            android:icon="@drawable/outline_today_24"
            android:title="@string/on_this_day"/>
    </group>

    <group
        android:id="@+id/g_recycler"
        android:checkableBehavior="single">
        <item
            android:id="@+id/recyclerBinFragment"
            android:icon="@drawable/outline_delete_24"
            android:title="@string/recycler_bin" />
    </group>

    <item android:title="@string/label" android:id="@+id/item_menu_label" >
        <menu >
            <group
                android:id="@+id/g_label"/>
        </menu>
    </item>
</menu>